--- a/locations.html
+++ b/locations.html
@@ -57,10 +57,12 @@
             </div>
             <div class = "places19 divplaces">
               <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Paris</span></p></a>
+              <a href = "./barcelona.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Barcelona</span></p></a>
             </div>
           </div>
           <div class = "col-10 d-flex align-content-start flex-wrap locationswrap">
 
+            <a href = "./barcelona.html" class = "placelinks"><div class = "placeslist"><h2 class = "countries">Barcelona</h2></div></a>
             <a href = "./tba.html" class = "placelinks"><div class = "placeslist"><h2 class = "countries">Berlin</h2></div></a>
             <a href = "./tba.html" class = "placelinks"><div class = "placeslist"><h2 class = "countries">Budapest</h2></div></a>
             <a href = "./tba.html" class = "placelinks"><div class = "placeslist"><h2 class = "countries">Cabo</h2></div></a>
