--- a/pages/barcelona.html
+++ b/pages/barcelona.html
@@ -57,7 +57,7 @@
             </div>
             <div class = "places19 divplaces">
               <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Paris</span></p></a>
-              <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Barcelona</span></p></a>
+              <a href = "./barcelona.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Barcelona</span></p></a>
             </div>
           </div>
 
@@ -67,30 +67,27 @@
 
           <div class = "col-8 tempbox">
             <div class = "bar b1"></div>
-            <h3 class = "title">Iceland</h3>
+            <h3 class = "title">Barcelona</h3>
             <div class = "bar b2"></div>
             <p class = "text"> I visited Barcelona for 10 days in the summer of 2019. This was immediately after my summer
               internship had ended so I was more than ready for a vacation. I took this trip with my college friend and sophomore
               year roommate, Julie Deng.
           </p>
-          <img src = "../images/iceland_background.jpeg" class = "one-image">
-          <p class = "text"> We started off our trip a dinner in Poble Sec. This place is INCREDIBLY cheap! Tapas were
+          <img src = "../images/barcelona/barcelona.jpg" class = "one-image">
+          <p class = "text"> We started off our trip with a dinner in Poble Sec. This place is INCREDIBLY cheap! Tapas were
           1 euro per dish, tacos were 1 euro per taco, and cocktails were 6-8 euros each! The streets are also
-          quite lively, as all tapas bars had outdoor seating that most people prefer.</p>
-              <div class = "mult-pics">
-                <img src = "../images/lagoon.jpeg" class = "two-image">
-                <img src = "../images/lagoonlogo.jpeg" class = "two-image">
-              </div>
-              <p class = "text">Our second day started off at Mercado de La Boqueria. This is the city's most famous
-              outdoor food market. We booked a cooking class to cook paella, and this market was where we bought the ingredients.
-              The cooking class itself was incredibly fun. We were able to meet about 10 other people from all over the world
-              and all come together to cook one gigantic dish of paella (traditional Spanish rice dish). There were lots
-              and lots of wine, which made the bonding and talking among everyone that much easier. While admittedly, I barely
-              did anything to contribute to the cooking, as everyone all contributes to a singular dish, it was still a really
-              fun experience that I would recommend to everyone. Plus, we got an amazing meal out of it!</p>
+          quite lively, as all tapas bars had outdoor seating that most people prefer.</p> <br>
+
+          <p class = "text">Our second day started off at Mercado de La Boqueria. This is the city's most famous
+          outdoor food market. We booked a cooking class to cook paella, and this market was where we bought the ingredients.
+          The cooking class itself was incredibly fun. We were able to meet about 10 other people from all over the world
+          and all come together to cook one gigantic dish of paella (traditional Spanish rice dish). There were lots
+          and lots of wine, which made the bonding and talking among everyone that much easier. While admittedly, I barely
+          did anything to contribute to the cooking, as everyone all contributes to a singular dish, it was still a really
+          fun experience that I would recommend to everyone. Plus, we got an amazing meal out of it!</p>
            <div class = "mult-pics">
-             <img src = "../images/horse.jpeg" class = "two-image">
-             <img src = "../images/horse2.jpeg" class = "two-image">
+             <img src = "../images/barcelona/paella_good.jpg" class = "two-image">
+             <img src = "../images/barcelona/paella.jpg" class = "two-image">
            </div>
 
            <p class = "text">After our cooking class, we walked about the market a bit more (it's pretty big!) and
@@ -98,43 +95,88 @@
             which was right next to the market. Las Ramblas is always very lively, with street performers, many shops,
             cool eateries, and just overall vibrant culture with so many people walking around. We bought all of our
             souvenirs here (pro tip: always bargain at souvenir shops)</p>
-           <img src = "../images/skogafoss.jpeg" class = "small-one-image">
-           <p class = "text">Another amazing waterfall is the Seljalandsfoss waterfall. This one is skinnier than the Skogafoss
-           waterfall, but the special thing about this one is that you can go behind the waterfall! Be prepared though,
-           you'll definitely get quite drenched (not recommended if you have a cold, as the high winds around the waterfall mixed with
-           getting drenched would not be good for you!)!</p>
+            <p class = "text">The rest of the day pretty much consisted of walking around the city, watching street performances,
+            and trying out new food. At night, we hit up a few bars around the Gothic Quarter.</p>
            <div class = "mult-pics">
-             <img src = "../images/waterfall1.jpeg" class = "two-image">
-             <img src = "../images/waterfall2.jpeg" class = "two-image">
+             <img src = "../images/barcelona/market.jpg" class = "two-image">
+             <img src = "../images/barcelona/hats.jpg" class = "two-image">
            </div>
 
-           <p class = "text"> Now, earlier I mentioned how this trip was one of the most unfortunate trips I've had. This was
-             specifically due to two different events. <br><br> First, we tried going northern lights hunting the first night. To find these
-             magical lights, you have to drive out quite a bit to different spots with clearer skies, until you're lucky enough
-             to spot them. The one night we went though, it had apparently rained a bit earlier that day. Thus, the skies were not
-             clear enough to spot the lights with the naked eye. My dad's dslr camera was able to capture some greenness, but
-             we were not able to spot anything with our eyes. Out of our entire trip, there were only two days that saw rain. Our tour group itinerary
-             set one of those days to northern lights hunting.</p>
-          <img src = "../images/northernlights.jpeg" class = "small-one-image">
-          <p class = "text"> The second day of rain, our tour group itinerary decided to go explore ice caves. I was so excited
-            about this. I had spent hours on instagram looking at pictures of icelandic ice caves. They looked absolutely magnificent.
-            However, the day we went, the rain poured HARD. All the ice caves flooded so we weren't able to ever go in one. We spent
-            the day hiking on ice, getting drenched in the process as nobody had umbrellas. We all got drenched inside out, and was
-            still unable to find any ice caves that weren't flooded. This was the best picture I was able to get. We were only
-            able to peek into a cave from the sides.</p>
-          <img src = "../images/caves.jpeg" class = "small-one-image">
-          <p class = "text"> Despite these scheduling mishaps, this was still an amazing trip I'll always remember. I've only
-            glossed through a few of the many highlights. We were also able to see the Gulfoss waterfall, watch geysers erupt hot springs,
-            visit the Reynisfjara black sand beach, walk between two continents at Þingvellir National Park, and wonder at giant glaciers. </p>
+           <p class = "text"> Our 3rd day was packed. We went to La Sagrada Familia in the morning, Park Guell in
+           the afternoon, and went to a Flamenco show at night. La Sagrada Familia is probably the most famous basilica
+            in Barcelona. Designed by Gaudi, this magnificent building is still in the process of being completed. The one thing we
+             were disappointed in was the tower. You can buy tickets to 2 different towers of the Basilica, the Nativity
+             and Passion Facade towers. We read online that Nativity tower is the best and is a must-buy; however, when
+           we got up there, you can barely see anything. The view is essentially one small bridge at the top of the tower,
+            but with all sides protected by a mesh net so you can't really get great pictures. Also, looking at the basilica from
+            up there, we mostly just saw construction. Regardless, La Sagrada Familia was beautiful and literally looks
+            like a castle.</p>
+          <div class = "mult-pics">
+            <img src = "../images/barcelona/sagrada.jpg" class = "two-image">
+            <img src = "../images/barcelona/sagrada_me.jpg" class = "two-image">
+          </div>
+          <p class = "text"> Park Guell was also stunning. While there are many beautiful and insta-worthy spots
+            on the free part of the park, the paid, protected part is a definite must. That's where the famous mosaic
+          benches are located. We spent a good hour just at these benches waiting for a spot to open up to take pictures.
+            I would recommend coming to the park 2 hours before your ticketed entry time, to walk around and take in the
+            free parts of the park. Also, try to book your ticketed entry time closer to sunset. It is SO stunning after
+            the sun sets and the sky is that perfect palette of warm pastels. Plus, I personally love the lighting
+            right after the sun sets, when it is not dark yet but the sun can't cast weird shadows on your face or turn
+            your face yellow altogether.</p>
+            <div class = "mult-pics">
+              <img src = "../images/barcelona/guellwjulie.jpg" class = "two-image">
+              <img src = "../images/barcelona/guell_sit.jpg" class = "two-image">
+            </div>
+          <p class = "text"> At night, we went to a flamenco show at Palau de la Musica. All the dancers were so
+          talented, and the show left us in awe. The venue itself was ornate and beautiful, and the show even came with
+          free champagne! Definitely recommend!!</p>
+
+          <p class = "text"> The next day, we visited more of Gaudi's buildings. We started with Casa Mila, followed
+          by Casa Batllo. Both places are guided tours with an audioguide, but the cool thing about Casa Batllo was
+          that you also get this device that shows you what the building used to look like when it was first designed
+          as you hold the device up to certain areas of the house. Technology!! </p>
+
+          <img src = "../images/barcelona/mila.jpg" class = "small-one-image">
+
+          <p class = "text">  This night, we decided to treat ourselves to a fancy dinner at Restaurant Informal. The appetizers are SOO
+          good. I literally still dream about their olive dipping sauce. The restaurant is also next to Chupitos,
+          a famous shots bar with hundreds of odd and eccentric shot combinations. This place is a must go
+          for tourists. Fun vibes, great drinks, cheap prices - what more could you ask for? After a few drinks at
+          Chupitos, we left and went clubbing.
+          <br><br>
+          In terms of clubs, Julie and I enjoyed Jamboree and Shoko the best. The vibe inside Pacha was also
+          really nice, but this played just played House music when we went, and we're not huge fans of that.
+          When you go out to clubs in Barcelona, always search up guest list and add yourself for free entry.
+          I downloaded the Xceed app which made the guest list process really simple. You just put your
+          email in the app, and freely add yourself on the guest list for any club. Be aware, though, if you want
+          the free admittance, go at least an hour early to wait in line -- everyone else also ues these guest lists
+          and the line gets inSANE. We waited 3 hours one night to get into Pacha.</p>
+          <br><br>
+          <p class = "text"> The rest of the trip consisted of either day trips or rest days where we just walked
+            around the city shopping, exploring, and eating. For our day trips, we spent one day in Girona and one
+            day in Montserrat. <br><br>
+            Girona was beatiful. There are so many nooks and crannies to appreciate, and so much good food. The
+            streets here were also extremely lively, with street performers, small shops, and puppers! Walking
+            in these streets felt like walking in some midieval fairytale. Be sure to walk the city walls and snap
+            pictures at the Eiffel bridge here! </p>
+            <div class = "mult-pics">
+              <img src = "../images/barcelona/girona_buildings.jpg" class = "two-image">
+              <img src = "../images/barcelona/windgirona.jpg" class = "two-image">
+            </div>
+          <p class = "text"> Montserrat was breathtaking. We took the tram up to the visitor center, and
+            walked the rest of the way up (took us 1-2 hours). Pictures honestly don't do this mountain justice.
+            Definitely a must-see if you visit Barcelona.</p>
 
           <div class = "mult-pics">
-            <img src = "../images/rocks.jpeg" class = "two-image">
-            <img src = "../images/split.jpeg" class = "two-image">
+            <img src = "../images/barcelona/montserratView.jpg" class = "two-image">
+            <img src = "../images/barcelona/montserrat_side.jpg" class = "two-image">
           </div>
-          <div class = "mult-pics">
-            <img src = "../images/whitesnow.jpeg" class = "two-image">
-            <img src = "../images/paidair.jpeg" class = "two-image">
-          </div>
+
+          <p class = "text"> Overall, the Barcelona trip was amazing. 10 days was a really comfortable length to stay
+          in Barcelona. The city itself is quite small, but there are so many nearby cities and day trips to explore.
+          10 days in the city also gave us enough time to slow down and explore the different corners of the city; we didn't
+          feel too rushed to hit everything at all!</p> <br><br>
+
 
           </div>
 
