--- a/pages/iceland.html
+++ b/pages/iceland.html
@@ -57,7 +57,7 @@
             </div>
             <div class = "places19 divplaces">
               <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Paris</span></p></a>
-              <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Barcelona</span></p></a>
+              <a href = "./barcelona.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Barcelona</span></p></a>
             </div>
           </div>
 
@@ -74,7 +74,7 @@
             such a good deal that even my family (who hates traveling) decided to go. We spent 5 days there, which I felt was
           the perfect amount of time to explore all the best places Reykjavik had to offer.
           </p>
-          <img src = "../images/iceland_background.jpeg" class = "one-image">
+          <img src = "../images/iceland/iceland_background.jpeg" class = "one-image">
           <p class = "text"> We started off our trip with a visit to The Blue Lagoon. You've probably seen countless photos of
              this blue goethermal spa. The temperature of the water is warm (average 102 degrees F) all year round, heated by
              the geothermal power plant nearby from which The Blue Lagoon gets its waters. The geothermal seawater
@@ -88,8 +88,8 @@
              first day in Iceland. Just sitting in the warm water feeling the placebo effect of all the minerals on my skin
               - nothing I can complain about. </p>
               <div class = "mult-pics">
-                <img src = "../images/lagoon.jpeg" class = "two-image">
-                <img src = "../images/lagoonlogo.jpeg" class = "two-image">
+                <img src = "../images/iceland/lagoon.jpeg" class = "two-image">
+                <img src = "../images/iceland/lagoonlogo.jpeg" class = "two-image">
               </div>
               <p class = "text">Probably the biggest highlight of the trip was going horseback riding on icelandic horses!
               Icelandic horses are much smaller and stubbier than regular horses. But in my opinion, that just makes them
@@ -98,22 +98,22 @@
              fast enough that it wasn't boring, but also slow enough that I could comfortably see and take in the scenes
            around me. Everyone in my family felt that this was a highlight of the trip, even though my mom fell off twice (lol). </p>
            <div class = "mult-pics">
-             <img src = "../images/horse.jpeg" class = "two-image">
-             <img src = "../images/horse2.jpeg" class = "two-image">
+             <img src = "../images/iceland/horse.jpeg" class = "two-image">
+             <img src = "../images/iceland/horse2.jpeg" class = "two-image">
            </div>
 
            <p class = "text">My other favorite parts of this trip were going to the major waterfalls in Iceland. The waterfalls
            here are absolutely G O R G E O U S. Skogafoss waterfall was the prettiest in my opinion. It's a massive waterfall and
             visitors can go right up to the foot of it. On sunny days, a perfect little rainbow arch appears over the waterfall,
            making pictures 1000x better. </p>
-           <img src = "../images/skogafoss.jpeg" class = "small-one-image">
+           <img src = "../images/iceland/skogafoss.jpeg" class = "small-one-image">
            <p class = "text">Another amazing waterfall is the Seljalandsfoss waterfall. This one is skinnier than the Skogafoss
            waterfall, but the special thing about this one is that you can go behind the waterfall! Be prepared though,
            you'll definitely get quite drenched (not recommended if you have a cold, as the high winds around the waterfall mixed with
            getting drenched would not be good for you!)!</p>
            <div class = "mult-pics">
-             <img src = "../images/waterfall1.jpeg" class = "two-image">
-             <img src = "../images/waterfall2.jpeg" class = "two-image">
+             <img src = "../images/iceland/waterfall1.jpeg" class = "two-image">
+             <img src = "../images/iceland/waterfall2.jpeg" class = "two-image">
            </div>
 
            <p class = "text"> Now, earlier I mentioned how this trip was one of the most unfortunate trips I've had. This was
@@ -123,25 +123,25 @@
              clear enough to spot the lights with the naked eye. My dad's dslr camera was able to capture some greenness, but
              we were not able to spot anything with our eyes. Out of our entire trip, there were only two days that saw rain. Our tour group itinerary
              set one of those days to northern lights hunting.</p>
-          <img src = "../images/northernlights.jpeg" class = "small-one-image">
+          <img src = "../images/iceland/northernlights.jpeg" class = "small-one-image">
           <p class = "text"> The second day of rain, our tour group itinerary decided to go explore ice caves. I was so excited
             about this. I had spent hours on instagram looking at pictures of icelandic ice caves. They looked absolutely magnificent.
             However, the day we went, the rain poured HARD. All the ice caves flooded so we weren't able to ever go in one. We spent
             the day hiking on ice, getting drenched in the process as nobody had umbrellas. We all got drenched inside out, and was
             still unable to find any ice caves that weren't flooded. This was the best picture I was able to get. We were only
             able to peek into a cave from the sides.</p>
-          <img src = "../images/caves.jpeg" class = "small-one-image">
+          <img src = "../images/iceland/caves.jpeg" class = "small-one-image">
           <p class = "text"> Despite these scheduling mishaps, this was still an amazing trip I'll always remember. I've only
             glossed through a few of the many highlights. We were also able to see the Gulfoss waterfall, watch geysers erupt hot springs,
             visit the Reynisfjara black sand beach, walk between two continents at Þingvellir National Park, and wonder at giant glaciers. </p>
 
           <div class = "mult-pics">
-            <img src = "../images/rocks.jpeg" class = "two-image">
-            <img src = "../images/split.jpeg" class = "two-image">
+            <img src = "../images/iceland/rocks.jpeg" class = "two-image">
+            <img src = "../images/iceland/split.jpeg" class = "two-image">
           </div>
           <div class = "mult-pics">
-            <img src = "../images/whitesnow.jpeg" class = "two-image">
-            <img src = "../images/paidair.jpeg" class = "two-image">
+            <img src = "../images/iceland/whitesnow.jpeg" class = "two-image">
+            <img src = "../images/iceland/paidair.jpeg" class = "two-image">
           </div>
 
           </div>
