--- a/pages/korea.html
+++ b/pages/korea.html
@@ -67,7 +67,7 @@
 
           <div class = "col-8 tempbox">
             <div class = "bar b1"></div>
-            <h3 class = "title">Barcelona</h3>
+            <h3 class = "title">Seoul, Korea</h3>
             <div class = "bar b2"></div>
             <p class = "text"> I visited Barcelona for 10 days in the summer of 2019. This was immediately after my summer
               internship had ended so I was more than ready for a vacation. I took this trip with my college friend and sophomore
