fixed link to barcelona

--- a/locations.html
+++ b/locations.html
@@ -57,7 +57,7 @@
             </div>
             <div class = "places19 divplaces">
               <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Paris</span></p></a>
-              <a href = "./barcelona.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Barcelona</span></p></a>
+              <a href = "./pages/barcelona.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Barcelona</span></p></a>
             </div>
           </div>
           <div class = "col-10 d-flex align-content-start flex-wrap locationswrap">
