--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
             </div>
             <div class = "places19 divplaces">
               <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Paris</span></p></a>
-              <a href = "./barcelona.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Barcelona</span></p></a>
+              <a href = "./pages/barcelona.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Barcelona</span></p></a>
             </div>
           </div>
           <div class = "col-1"></div>
